lib/stratiform/res/test/stratiform/corpus/neg/e307-schema-missing-name.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

document
  field foo string
